--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
+    "next-sanity": "^9.8.5",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
