--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@portabletext/react": "^3.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@sanity/vision": "^3.62.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
